# Scoring-Bias-in-LLM-as-a-Judge

./: .dockerignore  .editorconfig  .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.bak  500_things_plan.md  ALL_VENUES.md  CHANGELOG.md  CHECKLIST.md  CITATION.cff  COLLEGE_FAQ.md  CONTRIBUTING.md  DATA_INTEGRITY_AUDIT.md  Dockerfile  ERROR_ANALYSIS.md  FAQ.py  GETTING_STARTED.md  HARDWARE_REQUIREMENTS.md  KNOWN_ISSUES.md  LAUNCH_PACKAGE.md  LICENSE  Makefile  PAPER_STATUS.md  PRESSEKIT.md  PR_KIT.md  PUBLICATION_ROADMAP.md  PUBLIC_LAUNCH.md  QUALITY_AUDIT.md  README.md  REPLICATION.md  ROADMAP.md  ROADMAP_5YEAR.md  STS_ROADMAP.md  _audit_check.py  _check_syntax.py  _data_check.py  _final_verify.py  _gen_manifest.py  (+41 more)
.github/: pull_request_template.md
RETRACTED/: README.md
RETRACTED/legacy/infrastructure/: .dockerignore  .gitignore  .hermes.md  Dockerfile  Makefile  auto_pipeline.py  docker-compose.yml  environment.yml  kaggle_auto.py  lint_report.txt  pyproject.toml  requirements.txt  retry_kaggle.py  sb-final-v2.ipynb  scoring_bias_final_colab.ipynb  scoring_bias_final_colab_sanitized.ipynb
RETRACTED/legacy/infrastructure/kaggle_kernels/cell-test-0/: cell-test-0.ipynb  kernel-metadata.json
RETRACTED/legacy/infrastructure/kaggle_kernels/cell-test-1/: cell-test-1.ipynb  kernel-metadata.json
RETRACTED/legacy/infrastructure/kaggle_kernels/cell-test-2/: cell-test-2.ipynb  kernel-metadata.json
RETRACTED/legacy/infrastructure/kaggle_kernels/cell-test-3/: cell-test-3.ipynb  kernel-metadata.json
RETRACTED/legacy/infrastructure/kaggle_kernels/cell-test-4/: cell-test-4.ipynb  kernel-metadata.json
RETRACTED/legacy/infrastructure/kaggle_kernels/cell-test-5/: cell-test-5.ipynb  kernel-metadata.json
RETRACTED/legacy/infrastructure/kaggle_kernels/cell-test-6/: cell-test-6.ipynb  kernel-metadata.json
RETRACTED/legacy/infrastructure/kaggle_kernels/cuda-test-kaggle/: cuda-test-kaggle.ipynb  kernel-metadata.json
RETRACTED/legacy/infrastructure/kaggle_kernels/f-sb-final/: f-sb-final.ipynb  kernel-metadata.json
RETRACTED/legacy/infrastructure/kaggle_kernels/f-sb-v4/: f-sb-v4.ipynb  kernel-metadata.json
RETRACTED/legacy/infrastructure/kaggle_kernels/f-sb-v5/: f-sb-v5.ipynb  kernel-metadata.json
RETRACTED/legacy/infrastructure/kaggle_kernels/f-sb-v6/: f-sb-v6.ipynb  kernel-metadata.json
RETRACTED/legacy/infrastructure/kaggle_kernels/f-sb-v7/: f-sb-v7.ipynb  kernel-metadata.json
(+759 files in other folders)
